kubernetes/unifi-controller/backup/secret-holder.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/deployment-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: unifi-controller
  name: unifi-controller-backup-secret-holder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi-controller-backup-secret-holder
  template:
    metadata:
      labels:
        app: unifi-controller-backup-secret-holder
    spec:
      serviceAccount: unifi-controller-backup-secret-holder
      volumes:
        - name: secret
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: unifi-controller-backup-secret
      containers:
        - name: unifi-controller-backup-secret-holder
          image: busybox:latest
          command: ["sleep", "infinity"]
          volumeMounts:
            - name: secret
              mountPath: /secret
              readOnly: true
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources: {}
