kubernetes/unifi-controller/backup/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: unifi-controller
  name: unifi-controller-backup-policy
specs:
  # allow replicationsource connect to B2
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/created-by: volsync
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: kube-system
              k8s-app: kube-dns
        toPorts:
          - ports:
              - protocol: ANY
                port: "53"
            rules:
              dns: &b2
                - matchPattern: s3.us-east-005.backblazeb2.com
      - toFQDNs: *b2
        toPorts:
          - ports:
              - protocol: TCP
                port: "443"
  # allow workflow pod access api-server
  - endpointSelector:
      matchLabels:
        workflows.argoproj.io/workflow-template: unifi-controller-backup
    egress:
      - toEntities: [kube-apiserver]
        toPorts:
          - ports:
              - protocol: TCP
                port: "6443"
